[tool.poetry]
name = "squaregame"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
waitress = "^1.4.4"
replit = "^2.0.0"
mcstatus = "^5.1.1"
PyNaCl = "^1.4.0"
mutagen = "^1.45.1"
search-google = "^1.2.1"
discord-py-slash-command = "^1.1.2"
gtts = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
